2006-03-06  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/*.cc, *.h: add vim modelines to set proper indentation for
	cairomm when using vim

2006-02-28  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/context.cc:
	* cairomm/context.h:
	* cairomm/enums.h:
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h:
	* cairomm/pattern.cc:
	* cairomm/pattern.h:
	* cairomm/surface.h: wrapped all of the enum types with cairomm
	types within the Cairo namespace, so now (for example) the values for
	Cairo::Format are something like Cairo::FORMAT_ARGB32 instead of the base
	cairo types like CAIRO_FORMAT_ARGB_32.
	* examples/png_file/main.cc: fixed example to work with the new namespaced
	enum types

2006-02-27  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/exception.h:
	* docs/reference/Doxyfile.in:
	* docs/reference/Makefile.am: hide some of the private types and functions
	from the Doxygen API reference documentation

2006-02-27  Stefan Kersten  <steve@k-hornz.de>

	* cairomm/surface.cc: fix an extra trailing parentheses in
	GlitzSurface::create()

2006-02-22  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* examples/README: Write some basic information about each example

2006-02-22  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/reference/Makefile.am: add target for publishing the API reference
	to cairographics.org

2006-02-20  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* Makefile.am: Include MAINTAINERS in distribution. Fixes Bug #5982

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* COPYING: Use the text from the Library GPL 2.0, which is the actual
	license of cairomm. Fixes Bug #5934

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* autogen.sh:
	* cairomm/cairomm.h:
	* cairomm/context.cc:
	* cairomm/context.h:
	* cairomm/enums.h:
	* cairomm/exception.cc:
	* cairomm/exception.h:
	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h:
	* cairomm/path.cc: